--- a/control/pid.tex
+++ b/control/pid.tex
@@ -1,4 +1,4 @@
-\FloatBarrier\section{Cascaded PID control}
+\FloatBarrier\section{Cascaded PID control} \label{sec:cascaded_pid}
 
     \paragraph
     % This section gives a brief overview of the \gls{PID} control architecture design process used in this work.
