--- a/system_id/white_black_box.tex
+++ b/system_id/white_black_box.tex
@@ -67,7 +67,7 @@
         using information from measurement data only.
 
         \paragraph
-        A disadvantage of the data-driven system identifcation approach is its computational complexity.
+        A disadvantage of the data-driven system identification approach is its computational complexity.
         Data-driven algorithms generally have a much higher computational complexity than parameter estimation techniques.
         This is expected since a lot more model parameter values are generated 
         to populate a black-box model than a predefined white-box model.
@@ -84,7 +84,7 @@
         and provide a general system identification solution for a broad range of different dynamics.
         This is a major advantage over white-box system identification techniques, 
         which need to be manually redesigned for different use cases.
-        Add more advantages ??
+        % Add more advantages ??
 
         \paragraph
         Dynamical models can be categorised as either non-linear or linear models.
