Correct calculation of payload forces on quad and wrote modelling intro

--- a/glossary.tex
+++ b/glossary.tex
@@ -5,6 +5,7 @@
 \newacronym{CoM}{CoM}{Centre of Mass}
 \newacronym{2D}{2D}{Two Dimensional}
 \newacronym{3D}{3D}{Three Dimensional}
+\newacronym{6DOF}{6DOF}{Six Degrees of Freedom}
 \newacronym{NED}{NED}{North East Down}
 
 \newacronym{MRAC}{MRAC}{Model Reference Adaptive Control}
